spacing fix - about page

--- a/src/App.scss
+++ b/src/App.scss
@@ -300,7 +300,7 @@ body {
 
   .about-bottom {
     display: flex;
-    gap: 4.5rem;
+    gap: 6rem;
     align-items: center;
     max-width: 1100px;
     width: 100%;
